update card domain
